syntax = "proto3";

package TestGame;

enum ELoginPlatform {
  PLATFORM_UNKNOWN = 0;
  PLATFORM_STEAM = 1;
  PLATFORM_PSN = 2;
  PLATFORM_XBOX = 3;
  PLATFORM_EPIC = 4;
}

message FLoginRequest {
  string username = 1;
  string password = 2;
  ELoginPlatform platform = 3;
  string device_id = 4;
}

message FLoginResponse {
  bool success = 1;
  string session_token = 2;
  string error_message = 3;

  FPlayerProfile profile = 6;
}

message FPlayerProfile {
  string display_name = 1;
  int32 level = 2;
  float experience = 3;

  repeated string inventory_ids = 4;
  map<string, string> settings = 5;

  oneof active_status {
    bool is_online = 6;
    int64 last_seen_timestamp = 7;
  }
}

service AuthService {
  rpc Login (FLoginRequest) returns (FLoginResponse);
  rpc UpdateProfile (FPlayerProfile) returns (FPlayerProfile);
}